added incrementation of unfiltered layouts

--- a/src/app/@ansyn/menu-items/filters/components/boolean-filter-container/boolean-filter-container.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/boolean-filter-container/boolean-filter-container.component.html
@@ -21,7 +21,7 @@
 
 		<ansyn-filter-counter
 			[count]="properties.count"
-			[filteredCount]="properties.filteredCount">
+			[filteredCount]=" properties.value ? properties.filteredCount: properties.unfilteredCount">
 		</ansyn-filter-counter>
 
 	</div>
