--- a/src/app/@ansyn/menu-items/filters/components/enum-filter-container/enum-filter-container.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/enum-filter-container/enum-filter-container.component.html
@@ -23,7 +23,7 @@
 
 	<ansyn-filter-counter
 		[count]="enumMetadata.value.count"
-		[filteredCount]="enumMetadata.value.filteredCount">
+		[filteredCount]="enumMetadata.value.isChecked ? enumMetadata.value.filteredCount: enumMetadata.value.unfilteredCount">
 	</ansyn-filter-counter>
 
 </div>
