fix: overlays loader

--- a/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.less
+++ b/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.less
@@ -102,22 +102,14 @@
 	}
 }
 
-@media screen and (max-width: 660px) {
-	#editGeoFilter {
-		display: none;
-	}
-	.timeFilter {
+@media screen and (max-width: 959px) {
+	.hidden-medium-resolution {
 		display: none !important;
 	}
-
 }
 
-@media screen and (min-width: 660px) {
-	#editGeoFilter {
-		display: flex;
+@media screen and (max-width: 660px) {
+	div.hidden-low-resolution {
+		display: none !important;
 	}
-	.timeFilter {
-		display: flex;
-	}
-
 }
