Low resolution modifications (#1454)
* low resolution css handling

* low resolution css handling

* low resolution css handling

* fix: styles to assets

* fix: overlays loader

--- a/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.html
+++ b/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.html
@@ -1,7 +1,7 @@
 <div class="combo-boxes">
 
 	<!-- data input filter-->
-	<div class="combo-box-container block">
+	<div class="combo-box-container block hidden-medium-resolution">
 			<ansyn-combo-box-trigger
 				#trigger
 				class="combo-box-width"
@@ -34,7 +34,7 @@
 	</div>
 
 	<!-- Geo filter -->
-	<div class="combo-box-container block with-buttons" id="editGeoFilter">
+	<div class="combo-box-container block with-buttons hidden-low-resolution" id="editGeoFilter">
 
 		<ansyn-combo-box
 			class="combo-box-width"
@@ -65,7 +65,7 @@
 	</div>
 
 	<!-- Time -->
-	<div class="combo-box-container block with-buttons">
+	<div class="combo-box-container block with-buttons hidden-low-resolution">
 		<ansyn-combo-box
 			class="combo-box-width"
 			icon="icon-status-bar-time"
