--- a/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.less
+++ b/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.less
@@ -101,3 +101,15 @@
 		}
 	}
 }
+
+@media screen and (max-width: 959px) {
+	.hidden-medium-resolution {
+		display: none !important;
+	}
+}
+
+@media screen and (max-width: 660px) {
+	div.hidden-low-resolution {
+		display: none !important;
+	}
+}
