--- a/src/app/@ansyn/status-bar/components/combo-box/combo-box.component.less
+++ b/src/app/@ansyn/status-bar/components/combo-box/combo-box.component.less
@@ -17,7 +17,7 @@
 		.options-container {
 			border: 1px solid;
 			border-bottom: none;
-			width: 100%;
+			// width: 100%;
 			background: black;
 
 			&.show {
@@ -73,5 +73,16 @@
 				}
 			}
 		}
+	}
+}
+@media screen and (max-width: 1400px) {
+	.options-container {
+		width: 200%;
+	}
+}
+@media screen and (min-width: 1400px) {
+	.options-container {
+		width: 100%;
+
 	}
 }
