added counter to unchecked enum filters
added counter to unchecked boolean filters

red counter now appears also for boolean filter

moved the counting functionality to service

changed style of unchecked

--- a/src/app/@ansyn/menu-items/filters/components/boolean-filter-container/boolean-filter-container.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/boolean-filter-container/boolean-filter-container.component.html
@@ -20,6 +20,7 @@
 		</div>
 
 		<ansyn-filter-counter
+			[isChecked]="properties.value"
 			[count]="properties.count"
 			[filteredCount]="properties.filteredCount">
 		</ansyn-filter-counter>
