--- a/src/app/@ansyn/menu-items/filters/components/enum-filter-container/enum-filter-container.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/enum-filter-container/enum-filter-container.component.html
@@ -22,6 +22,7 @@
 
 
 	<ansyn-filter-counter
+		[isChecked]="enumMetadata.value.isChecked"
 		[count]="enumMetadata.value.count"
 		[filteredCount]="enumMetadata.value.filteredCount">
 	</ansyn-filter-counter>
