--- a/src/app/@ansyn/menu-items/filters/components/filter-counter/filter-counter.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/filter-counter/filter-counter.component.html
@@ -1,5 +1,6 @@
 <div>
-	<span>{{filteredCount}}</span>
+	<span *ngIf="!isChecked" class="unchecked">+</span>
+	<span [class.unchecked]="!isChecked">{{filteredCount}}</span>
 	/
 	<span>{{count}}</span>
 </div>
