--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -308,7 +308,7 @@
   },
   "loginConfig": {
     "baseUrl": "{{ getv "/ansyn/login/baseurl" "http://ansyn.io:9001/api/v1/login" }}",
-    "active": true,
+    "active":  "{{ getv "/ansyn/login/active" "" }}",
     "authorizedPath": "/"
   },
   "menuConfig": {
