--- a/src/app/@ansyn/menu-items/tools/tools/tools.component.less
+++ b/src/app/@ansyn/menu-items/tools/tools/tools.component.less
@@ -1,8 +1,12 @@
 @import "core/less/z-index-globals";
 @import 'core/less/tooltip';
+@import 'core/less/common';
 
 :host {
 	display: block;
+	background: @application-main-color;
+	height: 100%;
+
 	div.tools-menu-item-container {
 		display: flex;
 		flex-direction: column;
