fix(tools): unique radio button for overlays-diplay-mode

--- a/src/app/@ansyn/assets/styles/styles.less
+++ b/src/app/@ansyn/assets/styles/styles.less
@@ -117,6 +117,8 @@ button[disabled] {
 }
 
 .flatpickr-calendar {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
 	cursor: pointer;
 	.flatpickr-month {
 		height: 33px;
