--- a/src/app/@ansyn/status-bar/components/tree-view/tree-view.component.less
+++ b/src/app/@ansyn/status-bar/components/tree-view/tree-view.component.less
@@ -7,6 +7,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
+	min-width: 170px;
 	transform: translateY(calc(~'-100% - 15px'));
 
 	/deep/ .treeview-container .row-item {
