fix message and tooltip

--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
@@ -58,7 +58,7 @@
 				<div
 					[style.background]="alert.background"
 					[attr.tooltip-value]="alert.text"
-					tooltip-class="top left">
+					[attr.tooltip-class]="mapsAmount === 1 ? 'top left': 'bottom left'">
 					{{ alert.text }}
 				</div>
 			</ng-template>
