--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
@@ -1,6 +1,6 @@
-<div class="app animations" [ngClass]="isPinnedClass">
+<div class="app animations" [ngClass]="(isPinnedClass$ | async)">
 	<div class="menu">
-		<ansyn-menu [version]="version" *ngIf="(windowLayout$ | async).menu"></ansyn-menu>
+		<ansyn-menu [version]="version"></ansyn-menu>
 		<ansyn-tools class="ansynToolsAlone" ></ansyn-tools>
 	</div>
 
@@ -10,15 +10,15 @@
 		</div>
 
 		<div class="status-timeline-container">
-			<div class="status" *ngIf="(windowLayout$ | async).statusBar">
+			<div class="status">
 				<ansyn-status-bar
-					[selectedCaseName]="selectedCaseName"
+					[selectedCaseName]="(selectedCaseName$ | async)"
 					[activeMap]="(activeMap$ | async)"
 				>
 				</ansyn-status-bar>
 			</div>
 
-			<div class="app-timeline-container" *ngIf="(windowLayout$ | async).timeLine">
+			<div class="app-timeline-container">
 				<ansyn-overlays-container></ansyn-overlays-container>
 			</div>
 		</div>
