--- a/src/app/builder/dynamic-ansyn/bootstrap/ansyn.bootstrap.component.html
+++ b/src/app/builder/dynamic-ansyn/bootstrap/ansyn.bootstrap.component.html
@@ -1,4 +1,4 @@
-<div class="app animations" [ngClass]="isPinnedClass">
+<div class="app animations" [ngClass]="(isPinnedClass$ | async)">
 	<div class="menu">
 		<ansyn-tools></ansyn-tools>
 	</div>
@@ -11,7 +11,7 @@
 		<div class="status-timeline-container">
 			<div class="status" *ngIf="(windowLayout$ | async).statusBar">
 				<ansyn-status-bar
-					[selectedCaseName]="selectedCaseName"
+					[selectedCaseName]="(selectedCaseName$ | async)"
 					[activeMap]="(activeMap$ | async)"
 				>
 				</ansyn-status-bar>
