added more sensor types to dataInputFilters

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -289,6 +289,42 @@
             "value": {
               "sensorType": "PSScene3Band"
             }
+          },
+		  {
+            "text": "PSScene4Band",
+            "value": {
+              "sensorType": "PSScene4Band"
+            }
+          },
+		  {
+            "text": "PSOrthoTile",
+            "value": {
+              "sensorType": "PSOrthoTile"
+            }
+          },
+		  {
+            "text": "REOrthoTile",
+            "value": {
+              "sensorType": "REOrthoTile"
+            }
+          },
+		  {
+            "text": "SkySatScene",
+            "value": {
+              "sensorType": "SkySatScene"
+            }
+          },
+		  {
+            "text": "Landsat8L1G",
+            "value": {
+              "sensorType": "Landsat8L1G"
+            }
+          },
+		  {
+            "text": "Sentinel2L1C",
+            "value": {
+              "sensorType": "Sentinel2L1C"
+            }
           }
         ]
       },
