openlayers-map: add the attributions control

--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -62,6 +62,10 @@
 			margin-top: 16px;
 		}
 
+		/deep/ .ol-attribution {
+			bottom: 40px;
+		}
+
 		/deep/ .ol-scale-line {
 			min-width: 144px;
 		}
