feat: builder without data layer module

--- a/src/app/@ansyn/menu-items/tools/overlays-display-mode/overlays-display-mode.component.less
+++ b/src/app/@ansyn/menu-items/tools/overlays-display-mode/overlays-display-mode.component.less
@@ -26,6 +26,7 @@
 		display: flex;
 		font-family: "Lucida Grande", Tahoma, Verdana, sans-serif;
 		overflow: hidden;
+		height: 100%;
 	}
 
 	.switch-title {
