--- a/src/app/@ansyn/menu/menu/menu.component.html
+++ b/src/app/@ansyn/menu/menu/menu.component.html
@@ -16,8 +16,19 @@
 
 		</ng-container>
 
+		<!--<div class="logo">-->
+			<!---->
+		<!--</div>-->
 
 		<div class="logo">
+
+			<ng-container *ngIf="menuConfig?.forkMe?.active === 'true'">
+				<a class="forkMe" [href]="menuConfig.forkMe?.href" target="_blank">
+					<img [src]="menuConfig.forkMe?.image" [alt]="menuConfig.forkMe?.title" [title]="menuConfig.forkMe?.title">
+				</a>
+			</ng-container>
+
+
 			<div class="mode"
 				 *ngIf="menuConfig?.mode"
 				 [style.color]="menuConfig.color"
@@ -25,6 +36,7 @@
 				 [style.border]="'1px sollid' + menuConfig.color"
 			>{{menuConfig.mode}}
 			</div>
+
 			<img [src]="menuConfig.path" [alt]="version" [title]="version">
 		</div>
 	</div>
