--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -117,6 +117,11 @@ div.menu-wrapper {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+
+		a.forkMe {
+			margin-bottom: 15px;
+		}
+
 		div.mode {
 			width: 80%;
 			margin-bottom: 5px;
