Landsat8L1G and Sentinel2L1C sensors

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -524,6 +524,44 @@
     "PLANET": {
       "whitelist": [
         {
+          "name": "Entire Earth",
+          "dates": [
+            {
+              "start": null,
+              "end": null
+            }
+          ],
+          "sensorNames": [
+            "Landsat8L1G", "Sentinel2L1C"
+          ],
+          "coverage": [
+            [
+              [
+                [
+                  -180,
+                  -90
+                ],
+                [
+                  -180,
+                  90
+                ],
+                [
+                  180,
+                  90
+                ],
+                [
+                  180,
+                  -90
+                ],
+                [
+                  -180,
+                  -90
+                ]
+              ]
+            ]
+          ]
+        },
+        {
           "name": "California",
           "dates": [
             {
