--- a/src/app/@ansyn/menu/menu/menu.component.html
+++ b/src/app/@ansyn/menu/menu/menu.component.html
@@ -16,8 +16,14 @@
 
 		</ng-container>
 
-
 		<div class="logo">
+
+			<ng-container *ngIf="menuConfig?.forkMe?.active === 'true'">
+				<a class="forkMe" [href]="menuConfig.forkMe?.href" target="_blank">
+					<img [src]="menuConfig.forkMe?.image" [alt]="menuConfig.forkMe?.title" [title]="menuConfig.forkMe?.title">
+				</a>
+			</ng-container>
+
 			<div class="mode"
 				 *ngIf="menuConfig?.mode"
 				 [style.color]="menuConfig.color"
