added layers to case and fixed layers add and remove bugs

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -69,7 +69,8 @@
             "type": "FeatureCollection",
             "features": []
           },
-          "displayAnnotationsLayer": true
+          "displayAnnotationsLayer": true,
+          "activeLayersIds": []
         },
         "favoriteOverlays": [],
         "region": {
