multiple source provider: parse sensor names from the config

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -433,9 +433,7 @@
               "end": null
             }
           ],
-          "sensorNames": [
-            null
-          ],
+          "sensorNames": "[ null ]",
           "coverage": [
             [
               [
@@ -476,9 +474,7 @@
               "end": null
             }
           ],
-          "sensorNames": [
-            null
-          ],
+          "sensorNames": "[ null ]",
           "coverage": [
             [
               [
@@ -531,9 +527,7 @@
               "end": null
             }
           ],
-          "sensorNames": [
-            "Landsat8L1G", "Sentinel2L1C"
-          ],
+          "sensorNames": "[ \"Landsat8L1G\", \"Sentinel2L1C\" ]",
           "coverage": [
             [
               [
@@ -569,9 +563,7 @@
               "end": null
             }
           ],
-          "sensorNames": [
-            null
-          ],
+          "sensorNames": "[ null ]",
           "coverage": [
             [
               [
@@ -961,9 +953,7 @@
               "end": null
             }
           ],
-          "sensorNames": [
-            null
-          ],
+          "sensorNames": "[ null ]",
           "coverage": [
             [
               [
@@ -1011,9 +1001,7 @@
               "end": null
             }
           ],
-          "sensorNames": [
-            null
-          ],
+          "sensorNames": "[ null ]",
           "coverage": [
             [
               [
@@ -1062,9 +1050,7 @@
 						"end": null
 					}
 				],
-				"sensorNames": [
-					null
-				],
+				"sensorNames": "[ null ]",
 				"coverage": [
 					[
 						[
