--- a/src/app/@ansyn/menu-items/layers-manager/components/layers-manager/layers-manager.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layers-manager/layers-manager.component.html
@@ -12,7 +12,7 @@
 			(inputClicked)="annotationLayerClick()"></ansyn-checkbox>
 	</div>
 
-	<ng-container *ngFor="let collection of LayersContainers$ | async">
+	<ng-container *ngFor="let collection of layers$ | async">
 		<ansyn-layer-collection [collection]="collection"></ansyn-layer-collection>
 	</ng-container>
 </div>
