fix: unit tests via changes

--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
@@ -13,8 +13,7 @@
 			<div class="status">
 				<ansyn-status-bar
 					[selectedCaseName]="(selectedCaseName$ | async)"
-					[activeMap]="(activeMap$ | async)"
-				>
+					[activeMap]="(activeMap$ | async)">
 				</ansyn-status-bar>
 			</div>
 
