--- a/src/app/@ansyn/status-bar/components/status-bar/status-bar.component.html
+++ b/src/app/@ansyn/status-bar/components/status-bar/status-bar.component.html
@@ -3,8 +3,7 @@
 	[overlay]="activeMap?.data?.overlay"
 	[active]="true"
 	(backToWorldView)="clickBackToWorldView()"
-	[mapId]="activeMap?.id"
->
+	[mapId]="activeMap?.id">
 </ansyn-imagery-status>
 
 <div class="status-bar" [class.separated-state]="!hideOverlay">
