--- a/src/app/@ansyn/status-bar/components/status-bar/status-bar.component.html
+++ b/src/app/@ansyn/status-bar/components/status-bar/status-bar.component.html
@@ -9,7 +9,7 @@
 
 <div class="status-bar" [class.separated-state]="!hideOverlay">
 	<div class="selected-case">
-		<ansyn-selected-case-bar [selectedCaseName]="selectedCaseName"></ansyn-selected-case-bar>
+		<ansyn-selected-case-bar></ansyn-selected-case-bar>
 	</div>
 	<div class="status">
 		<ansyn-combo-boxes></ansyn-combo-boxes>
