--- a/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.html
+++ b/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.html
@@ -45,9 +45,9 @@
 			(selectedChange)="geoFilterChanged($event)">
 		</ansyn-combo-box>
 
-		<div class="buttons" [class.active]="geoFilterStatus.searchMode">
+		<div class="buttons" [class.active]="geoFilterStatus.searchMode !== SearchModeEnum.none">
 			<button (click)="toggleIndicatorView()"
-					[disabled]="geoFilterStatus.searchMode"
+					[disabled]="geoFilterStatus.searchMode !== SearchModeEnum.none"
 					[attr.tooltip-value]="toolTips.geoFilterShow"
 					tooltip-class="top right"
 					class="eye-button toggle-icon"
