fix: cancel geoFilter edit  (#1511)
* fix: efit geoFilter cancel

* fix: unit tests

* fix: update status-bar flags action to array

* fix: remove flags from status-bar

* fix: unit tests via changes

* stay alive when statusBarModule not imported

* fix: imagery status - back to world view dispatch instead of output

* fix: test compile

* fix: test imagery status

* fix: CR request changes

* fix: unit test via CR

--- a/src/app/@ansyn/status-bar/components/status-bar/status-bar.component.html
+++ b/src/app/@ansyn/status-bar/components/status-bar/status-bar.component.html
@@ -2,9 +2,7 @@
 	*ngIf="!hideOverlay"
 	[overlay]="activeMap?.data?.overlay"
 	[active]="true"
-	(backToWorldView)="clickBackToWorldView()"
-	[mapId]="activeMap?.id"
->
+	[mapId]="activeMap?.id">
 </ansyn-imagery-status>
 
 <div class="status-bar" [class.separated-state]="!hideOverlay">
