--- a/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.html
+++ b/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.html
@@ -41,17 +41,17 @@
 			[comboBoxToolTipDescription]="toolTips.geoFilter"
 			icon="icon-status-bar-geo"
 			[options]="geoFilters"
-			[selected]="comboBoxesProperties.geoFilter"
-			(selectedChange)="comboBoxesChange({ geoFilter: $event })">
+			[selected]="geoFilter"
+			(selectedChange)="geoFilterChanged($event)">
 		</ansyn-combo-box>
 
-		<div class="buttons" [class.active]="(flags.get(statusBarFlagsItemsEnum.geoFilterSearch))">
+		<div class="buttons" [class.active]="geoFilterStatus.searchMode !== SearchModeEnum.none">
 			<button (click)="toggleIndicatorView()"
-					[disabled]="flags.get(statusBarFlagsItemsEnum.geoFilterSearch)"
+					[disabled]="geoFilterStatus.searchMode !== SearchModeEnum.none"
 					[attr.tooltip-value]="toolTips.geoFilterShow"
 					tooltip-class="top right"
 					class="eye-button toggle-icon"
-					[class.active2]="flags.get(statusBarFlagsItemsEnum.geoFilterIndicator)">
+					[class.active2]="geoFilterStatus.indicator">
 				<i class="icon-status-bar-show-pin-point"></i>
 			</button>
 			<button
