data layers are now sent in shared link

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -105,7 +105,8 @@
       "maps",
       "region",
       "overlaysManualProcessArgs",
-      "orientation"
+      "orientation",
+      "layers"
     ],
     "updateCaseDebounceTime": 700,
     "useHash": true
