--- a/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.html
+++ b/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.html
@@ -8,6 +8,9 @@
 					Name
 				</div>
 				<div class="cases-table-head-col">
+					Saving Mode
+				</div>
+				<div class="cases-table-head-col">
 					Owner
 				</div>
 				<div class="cases-table-head-col">
@@ -37,6 +40,10 @@
 
 				<div class="cases-table-body-col">
 					{{entities[id].name}}
+				</div>
+
+				<div class="cases-table-body-col">
+					<ansyn-cases-auto-save></ansyn-cases-auto-save>
 				</div>
 
 				<div class="cases-table-body-col">
