added cases auto save component to project 1

--- a/src/app/@ansyn/menu-items/cases/components/cases-auto-save/cases-auto-save.component.html
+++ b/src/app/@ansyn/menu-items/cases/components/cases-auto-save/cases-auto-save.component.html
@@ -1,3 +1,5 @@
-<p>
-  cases-auto-save works!
-</p>
+<label class="switch">
+	<span class="slider-text">Auto Save</span>
+	<input id="show-only-favorites" [checked]="onlyFavorite"  type="checkbox" (click)="toggleAutoSave($event)"/>
+	<span class="slider round"></span>
+</label>
