--- a/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.less
+++ b/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.less
@@ -131,6 +131,13 @@ div.cases-table {
 				div.cases-table-body-col {
 					flex: 1;
 				}
+				div.cases-table-case-name-col {
+					flex: 1.5
+				}
+				div.cases-table-auto-save-col {
+					padding-top: 20px;
+					flex: 2;
+				}
 				div.case-menu-container {
 					flex: 0;
 					div.case-menu {
