New component ansyn-map-search-box

--- a/src/app/@ansyn/core/less/common.less
+++ b/src/app/@ansyn/core/less/common.less
@@ -5,6 +5,7 @@
 @status-bar-height: 35px;
 @source-type-notice-width: 40%;
 @welcome-notification-width: 30%;
+@map-search-box-width: 100px;
 @application-main-color: #27B2CF;
 @application-contrast-color: #d393e1;
 @overlays-dots-color: #d393e1;
