--- a/src/app/@ansyn/core/less/z-index-globals.less
+++ b/src/app/@ansyn/core/less/z-index-globals.less
@@ -11,6 +11,7 @@
 @z-index-tools-tooltiptext: 2;
 @z-index-imagery-status: 3;
 @z-index-overlay-source-type-notice: 3;
+@z-index-map-search-box: 3;
 @z-index-map-loader: 3;
 @z-index-imagery-loader: 3;
 @z-index-imageries-active-border: 4;
