--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -25,7 +25,7 @@
 		}
 
 		&:not(.layout1) {
-			/deep/ ansyn-imagery-rotation {
+			/deep/ ansyn-imagery-rotation, /deep/ ansyn-map-search-box {
 				top: 50px;
 			}
 		}
