added new action

--- a/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.less
+++ b/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.less
@@ -108,6 +108,9 @@ div.cases-table {
 				left: 0;
 				color: #ebf8fa;
 			}
+			/deep/ .slider-text {
+				color: inherit;
+			}
 			div.cases-table-body-row-data {
 				position: relative;
 				display: flex;
