--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -68,7 +68,8 @@
             "type": "FeatureCollection",
             "features": []
           },
-          "displayAnnotationsLayer": true
+          "displayAnnotationsLayer": true,
+          "activeLayersIds": []
         },
         "favoriteOverlays": [],
         "region": {
