--- a/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
@@ -14,7 +14,7 @@
 					id="checkbox{{ layer.id }}"
 					class="regular-checkbox"
 					(change)="onCheckboxClicked($event,layer)"
-					[checked]="layer.isChecked"></ansyn-checkbox>
+					[checked]="activeLayersIds.includes(layer.id)"></ansyn-checkbox>
 				<label for="checkbox{{ layer.id }}"></label>
 			</div>
 			<div class="layer-row">
