fixed layers collection name

--- a/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
@@ -7,7 +7,7 @@
 		</button>
 	</div>
 
-	<div class="layers" *ngFor="let layer of collectionWithIsChecked" [@layersTrigger]="show">
+	<div class="layers" *ngFor="let layer of collection" [@layersTrigger]="show">
 		<div class="left-side">
 			<div class="checkbox">
 				<ansyn-checkbox
