show all layesr button added

--- a/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
@@ -33,6 +33,15 @@ div.container {
 				opacity: 0.7;
 			}
 		}
+
+		div.show-all {
+			float: right;
+			font-size: 12px;
+			font-style: normal;
+			color: rgba(255, 255, 255, 0.75);
+			margin-right: 7px;
+			cursor: pointer;
+		}
 	}
 
 	div.layers {
