--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -350,7 +350,12 @@
 	},
     "storageService": {
       "baseUrl": "{{ getv "/ansyn/storage/baseurl" "http://ansyn.io:8081/api/store" }}"
-    }
+    },
+	"mapSearch": {
+		"active": true,
+		"url": "http://dev.virtualearth.net/REST/v1/Locations?locality=$searchString&maxResults=1&key=$apiKey",
+		"apiKey": "AofqJGk-uEej_Pv7hkbpXh6H3pb54luGZj6lfe90ksZEoBY-JmgTwGE2s9TF6peC"
+	}
   },
   "loginConfig": {
     "baseUrl": "{{ getv "/ansyn/login/baseurl" "http://ansyn.io:9001/api/v1/login" }}",
