--- a/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
@@ -22,5 +22,5 @@
 
 	<ansyn-overlay-source-type-notice [overlay]="overlay"></ansyn-overlay-source-type-notice>
 
-	<ansyn-map-search-box *ngIf="!overlay" [mapId]="mapState.id"></ansyn-map-search-box>
+	<ansyn-map-search-box *ngIf="mapSearchIsActive && !overlay" [mapId]="mapState.id"></ansyn-map-search-box>
 </div>
